compiler/testData/cli/jvm/classAndPartClash.kt
package test

class ClassAndPartClash {

}

class ClassAndPartClash_ {

}

fun z () {

}